force-app/main/default/objects/Obj33__c/Obj33__c.object-meta.xml
<CustomObject>
    <label>Obj33</label>
    <nameField>
        <label>Obj33 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obj33s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>