force-app/main/default/objects/Obj33__c/fields/testField7__c.field-meta.xml
<CustomField>
    <fullName>testField7__c</fullName>
    <label>testField7</label>
    <length>20</length>
    <type>Text</type>
</CustomField>