force-app/main/default/objects/Obj33__c/fields/TestFieldProfile2__c.field-meta.xml
<CustomField>
    <fullName>TestFieldProfile2__c</fullName>
    <label>TestFieldProfile2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>