force-app/main/default/objects/Obj33__c/fields/TestFieldProfile3__c.field-meta.xml
<CustomField>
    <fullName>TestFieldProfile3__c</fullName>
    <label>TestFieldProfile3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>