force-app/main/default/objects/Obj33__c/fields/TestFieldProfile4__c.field-meta.xml
<CustomField>
    <fullName>TestFieldProfile4__c</fullName>
    <label>TestFieldProfile4</label>
    <length>20</length>
    <type>Text</type>
</CustomField>